syntax = "proto3";

package common;

option go_package = "shared/proto/common";

message PaginationRequest {
    int32 page = 1;
    int32 limit = 2;
}

message PaginationMetadata {
    int32 current_page = 1;
    int32 total_pages = 2;
    int32 total_items = 3;
    int32 page_limit = 4;
}